--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "monoeq/kirby-props",
+    "name": "jg/kirby-props",
     "description": "Kirby Props",
     "type": "kirby-plugin",
     "license": "MIT",
